--- a/afterfilm/src/main/resources/application.properties
+++ b/afterfilm/src/main/resources/application.properties
@@ -8,3 +8,6 @@ spring.jpa.hibernate.ddl-auto=update
 # mybatis setting
 mybatis.mapper-locations=classpath:sql/mapper/**/*.xml
 mybatis.config-location=classpath:mybatis-config.xml
+
+# JWT
+jwt.secret=2tM1V4G41SDL91gvUECxzn/j1l2GZJ3DZn9O1olr4No=
