--- a/afterfilm/src/main/resources/application.properties
+++ b/afterfilm/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=afterfilm
 spring.datasource.url=jdbc:mysql://afterfilmqa.cfymc0kii44t.ap-northeast-2.rds.amazonaws.com:3306/AFTERFILMQA
 spring.datasource.username=admin
-spring.datasource.password=afterfilmqa!
+spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
 
 
@@ -10,4 +10,3 @@ mybatis.mapper-locations=classpath:sql/mapper/**/*.xml
 mybatis.config-location=classpath:mybatis-config.xml
 
 # JWT
-
